rename index as blog, add katex math rendering

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+markdown:         kramdown
+highlighter:      rouge
+plugins: [jekyll-paginate]
 
 # Permalinks
 permalink:        pretty
@@ -10,16 +11,8 @@ title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://jacob.moorman.me/hyde/
-baseurl:          /hyde/
+baseurl:          /hyde
 
 author:
   name:           'Jacob Moorman'
   url:            https://jacob.moorman.me/
-
-paginate:         5
-
-# Custom vars
-version:          2.1.0
-
-github:
-  repo:           https://github.com/jdmoorman/hyde
