--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 title:            Hyde
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://jacob.moorman.me/hyde/
-baseurl:          /hyde
+baseurl:          "/hyde"
 
 author:
   name:           'Jacob Moorman'
