fix broken pagination from the hacking

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:         kramdown
 highlighter:      rouge
-plugins: [jekyll-paginate]
+plugins:          [jekyll-paginate]
 
 # Permalinks
 permalink:        pretty
@@ -9,8 +9,12 @@ permalink:        pretty
 # Setup
 title:            Hyde
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://jacob.moorman.me/hyde/
+url:              https://jacob.moorman.me/hyde
 baseurl:          "/hyde"
+
+paginate:         1
+paginate_path:    "/blog/page:num/"
+blog_url:        "/blog/"
 
 author:
   name:           'Jacob Moorman'
