--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ description:      'A brazen two-column <a href="http://jekyllrb.com" target="_bl
 url:              https://jacob.moorman.me/hyde
 baseurl:          "/hyde"
 
+# Options: 7, 8, 9, a, b, c, d, e, f
+theme_id: "7"
+
 author:
   name:           'Jacob Moorman'
   url:            https://jacob.moorman.me/
