--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url:              https://mputhawala.github.io/
 baseurl:          ""
 
 # Options: 7, 8, 9, a, b, c, d, e, f
-theme_id: "7"
+theme_id: "a"
 
 author:
   name:           'Michael  Puthawala'
